# changesets

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  knope.toml
.changeset/: changefrom_file_and_changefrom_file_name_and_content_no_longer_normalize_paths.md  removed_fromasrefstr_for_uniqueid.md  rework_changeset_and_packagechange_interfaces.md  update_edition_to_2024_and_msrv_to_185.md
.github/: renovate.json
.github/workflows/: checks.yml  prerelease.yml  publish.yml  release.yml  release_dry_run.yml
src/: change.rs  changeset.rs  lib.rs  versioning.rs
tests/: change.rs  change_set.rs
