[package]
name = "changesets"
authors = ["Dylan Anthony"]
edition = "2021"
rust-version = "1.70"
description = "A library for parsing and creating changeset files"
readme = "README.md"
repository = "https://github.com/knope-dev/changesets"
license = "MIT OR Apache-2.0"
keywords = ["changeset", "changelog", "semantic", "versioning", "release"]
categories = ["development-tools"]
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "3.6.0"
